--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -22,6 +22,11 @@
     "rules": {
         "import/prefer-default-export": "off",
         "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
-        "react/prop-types": "off"
+        "react/prop-types": "off",
+        "import/no-extraneous-dependencies": [
+            "error", {
+               "devDependencies": true
+            }
+        ]
     }
 }
