--- a/package.json
+++ b/package.json
@@ -14,12 +14,6 @@
     "url": "git+https://github.com/PavelPankov111/test-sberbank.git"
   },
   "keywords": [],
-  "jest": {
-    "moduleNameMapper": {
-      "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "./__mocks__/fileMock.js",
-      "\\.(css|scss)$": "identity-obj-proxy"
-    }
-  },
   "author": "",
   "license": "ISC",
   "bugs": {
@@ -31,15 +25,18 @@
     "@babel/plugin-transform-runtime": "^7.15.0",
     "@babel/preset-env": "^7.15.0",
     "@babel/preset-react": "^7.14.5",
+    "@babel/runtime": "^7.15.3",
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^12.0.0",
+    "@testing-library/user-event": "^13.2.1",
+    "autoprefixer": "^10.3.3",
     "babel-eslint": "^10.1.0",
     "babel-jest": "^27.1.0",
     "babel-loader": "^8.2.2",
     "clean-webpack-plugin": "^4.0.0-alpha.0",
     "compression-webpack-plugin": "^8.0.1",
     "css-loader": "^6.2.0",
-    "enzyme": "^3.11.0",
-    "enzyme-adapter-react-16": "^1.15.6",
-    "enzyme-to-json": "^3.6.2",
+    "cssnano": "^5.0.8",
     "eslint": "^7.32.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-prettier": "^8.3.0",
@@ -49,15 +46,18 @@
     "eslint-plugin-prettier": "^3.4.1",
     "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "fetch-mock": "^9.11.0",
     "html-webpack-plugin": "^5.3.2",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^27.1.0",
-    "jsdom": "17.0.0",
+    "jsdom": "^17.0.0",
     "jsdom-global": "3.0.2",
     "mini-css-extract-plugin": "^2.2.0",
+    "node-fetch": "^2.6.1",
     "postcss-loader": "^6.1.1",
     "prettier": "^2.3.2",
     "react-test-renderer": "^17.0.2",
+    "redux-mock-store": "^1.5.4",
     "sass-loader": "^12.1.0",
     "serve": "^12.0.0",
     "style-loader": "^3.2.1",
@@ -68,9 +68,6 @@
     "webpack-merge": "^5.8.0"
   },
   "dependencies": {
-    "@babel/runtime": "^7.15.3",
-    "autoprefixer": "^10.3.2",
-    "cssnano": "^5.0.8",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-input-mask": "^2.0.4",
